# src/routes/index.js
@@ -4,6 +4,7 @@ const authRoutes = require("./auth.js");
 const visitRoutes = require("./visit.js");
 const settingRoutes = require("./settings.js");
 const userRoutes = require("./user.js");
+const dashboardRoutes = require("./dashboard.js");
 module.exports = (app) => {
   const baseVersion = nconf.get("BASE_VERSION");
 
@@ -11,4 +12,5 @@ module.exports = (app) => {
   app.use(`/api/${baseVersion}/visit`, visitRoutes);
   app.use(`/api/${baseVersion}/setting`, settingRoutes);
   app.use(`/api/${baseVersion}/user`, userRoutes);
+  app.use(`/api/${baseVersion}/dashboard`, dashboardRoutes);
 };
